--- a/app.css
+++ b/app.css
@@ -1,10 +1,11 @@
 body {
-    background: pink;
+    background-color: pink;
     font-family: "Nunito", sans-serif;
+
 }
 
-#mainNavbar  {
-    font-size: 1.5rem;
+#mainNavbar {
+    font-size: 24px;
     font-weight: 100;
 }
 
@@ -20,4 +21,17 @@ body {
     color: red;
 }
 
+#headingGroup span {
+    color: red;
+}
 
+#headingGroup h1 {
+    font-weight: 100;
+    font-size: 3.5rem;
+}
+
+@media (max-width: 1200px) {
+    #headingGroup h1 {
+        font-size: 3rem;
+    }
+}
