--- a/app.css
+++ b/app.css
@@ -1,7 +1,24 @@
 body {
-    background-color: pink;
+    background-color: #f5d9d5;
     font-family: "Nunito", sans-serif;
 
+}
+
+.blurb h2 {
+    color: red;
+    font-weight: 100;
+    font-size: 2.5rem;
+}
+
+.blurb p{
+    color: #f498b8;
+    font-weight: 100;
+    font-size: 1.125rem;
+    line-height: 2;
+} 
+
+.content {
+    margin-top: 100px;
 }
 
 #mainNavbar {
